// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete secret secret deleted: secret removal 1`] = `
Array [
  Array [
    "DELETE FROM \\"secrets-table-escaped-id\\" WHERE id=\\"secret-selector\\"",
  ],
]
`;

exports[`get secret reading secret: reading secret, secret exists 1`] = `
Array [
  Array [
    "SELECT \\"secret\\" FROM \\"secrets-table-escaped-id\\" WHERE id = ?",
    "secret-selector",
  ],
]
`;

exports[`set secret error on setting secret: error on setting secret 1`] = `
Array [
  Array [
    "BEGIN IMMEDIATE;
       INSERT INTO \\"secrets-table-escaped-id\\"(
        \\"idx\\", 
        \\"id\\", 
        \\"secret\\"
        ) VALUES (
         COALESCE(
          (SELECT MAX(\\"idx\\") FROM \\"secrets-table-escaped-id\\") + 1,
          0
         ),
         \\"secret-selector-escaped\\",
         \\"secret-value-escaped\\"
       );
       COMMIT;",
  ],
  Array [
    "ROLLBACK;",
  ],
]
`;

exports[`set secret secret is set: setting secret 1`] = `
Array [
  Array [
    "BEGIN IMMEDIATE;
       INSERT INTO \\"secrets-table-escaped-id\\"(
        \\"idx\\", 
        \\"id\\", 
        \\"secret\\"
        ) VALUES (
         COALESCE(
          (SELECT MAX(\\"idx\\") FROM \\"secrets-table-escaped-id\\") + 1,
          0
         ),
         \\"secret-selector-escaped\\",
         \\"secret-value-escaped\\"
       );
       COMMIT;",
  ],
]
`;
